# sloppy-incentive-simulator

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  LICENSE  PRODUCT.md  README.md  icframe.toml.example  incentive_spec_example_learning_v0_3.toml  incentive_spec_example_tokenmaxxing.toml  incentive_spec_example_tokenmaxxing_v0_3.toml  incentive_spec_v0_2.md  incentive_spec_v0_3.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_training.py
docs/: architecture.md  benchmark-ladder.md  capability-matrix.md  challenge-post-outline.md  current-implementation-salvage.md  current-stage.md  domain-pack-manifest-v0.4.schema.json  domain-packs.md  incentive-spec-v0.4.schema.json  roadmap.md  serverless-nebius.md  threat-model.md
examples/: learning_smoke.py  pettingzoo_smoke.py
examples/microbenches/: public_goods.json
notebooks/: experiment_viewer.py  library_quickstart.py
scripts/: flagship_goodhart.py  generate_schema.py  package_smoke.py
src/icframe/: __init__.py  artifacts.py  catalog.py  llm.py  observability.py  planning.py  profiles.py  replay.py  runtime_settings.py  study.py  symbolic.py
src/icframe/adapters/: __init__.py  pettingzoo.py
src/icframe/analytics/: __init__.py
src/icframe/cli/: __init__.py  main.py
src/icframe/constraints/: __init__.py  clingo.py
src/icframe/core/: __init__.py  compiler.py  engine.py  execution.py  hooks.py  metrics.py  observer.py  packs.py  policies.py  projection.py  types.py
src/icframe/domain/: __init__.py  base.py  evaluation.py  events.py  incentive_spec.py  incentives.py  mutations.py  norms.py  provenance.py  reporting.py  run.py  scenario.py  state.py  (+1 more)
tests/: conftest.py
tests/golden/: public_goods_laws.json  public_goods_trace_summary.json
tests/integration/: test_artifact_lifecycle_hardening.py  test_artifacts_replay_catalog.py  test_clingo_adapter.py  test_end_to_end.py  test_html_report.py  test_library_quickstart.py  test_mesa_simulation.py  test_orchestration_v05.py  test_pettingzoo_v04.py  test_reports_v04.py  test_results_workbench_v041.py  test_studies_v04.py  test_symbolic_v04.py  test_ui_server_v04.py
tests/live/: test_nebius_v05.py
tests/unit/: test_artifact_bundles_v05.py  test_domain_models.py  test_graph_analytics_v04.py  test_incentive_spec_v02.py  test_incentive_spec_v03.py  test_jobs_v04.py  test_networkx_projection.py  test_planning_v05.py  test_profiles_v05.py  test_runtime_settings.py  test_runtime_v04.py  test_schema_and_compiler.py  test_ui_requests.py
(+55 files in other folders)
