[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "icframe"
version = "0.1.0"
description = "Incentive Compatibility Simulation Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clingo>=5.7",
    "mesa>=3.0",
    "networkx>=3.2",
    "optuna>=3.6",
    "pydantic>=2.12",
]

[project.scripts]
icframe = "icframe.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.11",
]
viz = [
    "marimo>=0.15.5",
    "matplotlib>=3.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/icframe"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "notebooks"]
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/icframe/reports/html.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
