[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "icframe"
version = "0.4.0"
description = "Incentive Compatibility Simulation Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12",
]

[project.scripts]
icframe = "icframe.cli.main:main"

[project.optional-dependencies]
symbolic = [
    "clingo>=5.7",
]
optimize = [
    "optuna>=3.6",
]
llm = [
    "litellm>=1.91.0",
]
marl = [
    "gymnasium>=1.3.0",
    "numpy>=2.0",
    "pettingzoo>=1.26.1",
]
analytics = [
    "networkx>=3.2",
]
integrations = [
    "clingo>=5.7",
    "gymnasium>=1.3.0",
    "litellm>=1.91.0",
    "networkx>=3.2",
    "numpy>=2.0",
    "optuna>=3.6",
    "pettingzoo>=1.26.1",
]

[dependency-groups]
dev = [
    "clingo>=5.7",
    "gymnasium>=1.3.0",
    "numpy>=2.0",
    "optuna>=3.6",
    "pettingzoo>=1.26.1",
    "pytest>=8.3",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/icframe"]
artifacts = [
    "src/icframe/domain_packs/**/*.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/icframe/reports/html.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
